@startuml
  class Product{
    + void operation()
    + void operation2()
  }

  class Creator{
    - virtual Product* createProduct(int type)
    + Product* factoryMethod(int type)
  }

  class CreatorA{
  + Product* createProduct(int type)

  }

  Creator <|..CreatorA : Implementa
  Creator -> CreatorA :  Regresa
  Product <-- CreatorA :  Regresa

@enduml
